# quant-trading-strategy-backtester

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml  test.yml  version.yml
resources/: m1_max_pandas_pairs_trading_with_optimisers.csv  m1_max_polars_pairs_trading_with_optimisers.csv  pandas_pairs_trading_benchmark.csv  polars_pairs_trading_benchmark.csv  streamlit_pandas_pairs_trading_with_optimisers.csv  streamlit_polars_pairs_trading_with_optimisers.csv
scripts/: benchmark_pairs_trading.py  export_to_requirements.sh  visualise_pandas_to_polars_benchmark.py
src/quant_trading_strategy_backtester/: app.py  backtester.py  data.py  models.py  optimiser.py  strategy_templates.py  streamlit_ui.py  utils.py  visualisation.py
src/quant_trading_strategy_backtester/strategies/: base.py  buy_and_hold.py  mean_reversion.py  moving_average_crossover.py  pairs_trading.py
tests/: conftest.py  test_app.py  test_backtester.py  test_data.py  test_optimisation.py  test_optimiser.py  test_strategy_templates.py
tests/strategies/: test_base.py  test_buy_and_hold.py  test_mean_reversion.py  test_moving_average_crossover.py  test_pairs_trading.py
