[tool.poetry]
name = "quant-trading-strategy-backtester"
version = "0.1.0"
description = "A quantitative trading strategy backtester with an interactive dashboard. Enables users to implement, test, and visualise trading strategies using historical market data, featuring customisable parameters and key performance metrics. Developed with Python."
authors = ["Isaac Cheng <47993930+IsaacCheng9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.53.0"
pandas = "^2.3.3"
numpy = "^2.1.2"
yfinance = "^1.0"
plotly = "^6.5.2"
pyarrow = ">=18.0.0"
rpds-py = ">=0.22.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
pytest = "^9.0.0"
poethepoet = "^0.27.0"
watchdog = "^6.0.0"
coverage = "^7.6.0"
mypy = "^1.15.0"
pandas-stubs = "^2.2.2.240603"

[tool.poe.tasks]
app = "poetry run streamlit run src/quant_trading_strategy_backtester/app.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
